@@ -61,6 +61,7 @@ section below.
 .TP
 .BI \-d
 Echos debugging and information messages to the console.
+Subsequent debug options stop \fBdhcpcd\fR from daemonising.
 .TP
 .BI \-h \ hostname
 specifies a string used for the hostname option field when
